envoy.yml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address: {address: 0.0.0.0, port_value: 8001}
static_resources:
  listeners:
    - address:
        socket_address: {address: 0.0.0.0, port_value: 80}
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: api_routes
                  virtual_hosts:
                    - name: api
                      domains: ["*"]
                      routes:
                      - match: {prefix: "/tenant"}
                        route: {cluster: api}
                      - match: {prefix: "/asset"}
                        route: {cluster: api}
                      - match: {prefix: "/pipeline"}
                        route: {cluster: api}
                      - match: {prefix: "/job"}
                        route: {cluster: api}
                      - match: {prefix: "/operator"}
                        route: {cluster: api}
                      - match: {prefix: "/usage"}
                        route: {cluster: api}
                      - match: {prefix: "/"}
                        route: {cluster: api}
                        per_filter_config:
                          envoy.ext_authz:
                            disabled: true
                http_filters:
                  - name: envoy.ext_authz
                    config:
                      http_service:
                        server_uri:
                          uri: api:5000
                          cluster: authorization
                          timeout: 0.25s
                        path_prefix: /auth
                        authorization_response:
                          allowed_upstream_headers:
                            patterns: {prefix: "x-ameto-"}
                  - name: envoy.router
  clusters:
    - name: authorization
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      hosts:
        - socket_address: {address: api, port_value: 5000}
    - name: api
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      hosts:
        - socket_address: {address: api, port_value: 5000}
